--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,5 +1,4 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
-
 ja:
   devise:
     confirmations:
@@ -26,7 +25,7 @@ ja:
       password_change:
         subject: 'パスワードの変更について'
     omniauth_callbacks:
-      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
+      failure: "%{kind} アカウントによる認証に失敗しました。理由:（%{reason}）"
       success: "%{kind} アカウントによる認証に成功しました。"
     passwords:
       no_token: "このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。"
